[package]
name = "treebitmap"
version = "0.5.0"
authors = ["Hroi Sigurdsson <hroi@asdf.dk>", "Jakub Onderka <ahoj@jakubonderka.cz>", "Francesco Degrassi <francesco.degrassi@optionfactory.net"]
description = "Forked version of fast IPv4/IPv6 lookup trie."
license = "MIT"
repository = "https://github.com/optionfactory/treebitmap"
readme = "README.md"
keywords = ["ip", "networking", "trie", "cidr"]
categories = ["data-structures", "network-programming"]
edition = "2021"

[dependencies]
const_for = "0.1.5"

[dev-dependencies]
rand = "0.7.2"
criterion = { version = "0.5", features = ["html_reports"] }


[badges]
travis-ci = { repository = "JakubOnderka/treebitmap" }

[features]
alloc = []

[[bench]]
name = "any_matching"
harness = false
